docstore/pb/protobuf3_parser.go
// Generated from Protobuf3.g4 by ANTLR 4.7.

package pb // Protobuf3

import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var deserializer = antlr.NewATNDeserializer(nil)
var deserializedATN = deserializer.DeserializeFromUInt16(parserATN)

var literalNames = []string{
	"", "'bool'", "'bytes'", "'double'", "'enum'", "'fixed32'", "'fixed64'",
	"'float'", "'import'", "'int32'", "'int64'", "'map'", "'message'", "'oneof'",
	"'option'", "'package'", "'\"proto3\"'", "''proto3''", "'public'", "'repeated'",
	"'reserved'", "'returns'", "'rpc'", "'service'", "'sfixed32'", "'sfixed64'",
	"'sint32'", "'sint64'", "'stream'", "'string'", "'syntax'", "'to'", "'uint32'",
	"'uint64'", "'weak'", "", "", "", "", "", "", "'('", "')'", "'{'", "'}'",
	"'['", "']'", "'<'", "'>'", "';'", "','", "'.'", "'-'", "'+'", "'='",
}
var symbolicNames = []string{
	"", "BOOL", "BYTES", "DOUBLE", "ENUM", "FIXED32", "FIXED64", "FLOAT", "IMPORT",
	"INT32", "INT64", "MAP", "MESSAGE", "ONEOF", "OPTION", "PACKAGE", "PROTO3_DOUBLE",
	"PROTO3_SINGLE", "PUBLIC", "REPEATED", "RESERVED", "RETURNS", "RPC", "SERVICE",
	"SFIXED32", "SFIXED64", "SINT32", "SINT64", "STREAM", "STRING", "SYNTAX",
	"TO", "UINT32", "UINT64", "WEAK", "Ident", "IntLit", "FloatLit", "BoolLit",
	"StrLit", "Quote", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACK", "RBRACK",
	"LCHEVR", "RCHEVR", "SEMI", "COMMA", "DOT", "MINUS", "PLUS", "ASSIGN",
	"WS", "COMMENT", "LINE_COMMENT",
}

var ruleNames = []string{
	"proto", "syntax", "importStatement", "packageStatement", "option", "optionName",
	"topLevelDef", "message", "messageBody", "enumDefinition", "enumBody",
	"enumField", "enumValueOption", "service", "rpc", "reserved", "pbranges",
	"pbrange", "fieldNames", "pbtype", "fieldNumber", "field", "fieldOptions",
	"fieldOption", "oneof", "oneofField", "mapField", "keyType", "fullIdent",
	"messageName", "enumName", "messageOrEnumName", "fieldName", "oneofName",
	"mapName", "serviceName", "rpcName", "messageType", "messageOrEnumType",
	"emptyStatement", "constant",
}
var decisionToDFA = make([]*antlr.DFA, len(deserializedATN.DecisionToState))

func init() {
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
}

type Protobuf3Parser struct {
	*antlr.BaseParser
}

func NewProtobuf3Parser(input antlr.TokenStream) *Protobuf3Parser {
	this := new(Protobuf3Parser)

	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "Protobuf3.g4"

	return this
}

// Protobuf3Parser tokens.
const (
	Protobuf3ParserEOF           = antlr.TokenEOF
	Protobuf3ParserBOOL          = 1
	Protobuf3ParserBYTES         = 2
	Protobuf3ParserDOUBLE        = 3
	Protobuf3ParserENUM          = 4
	Protobuf3ParserFIXED32       = 5
	Protobuf3ParserFIXED64       = 6
	Protobuf3ParserFLOAT         = 7
	Protobuf3ParserIMPORT        = 8
	Protobuf3ParserINT32         = 9
	Protobuf3ParserINT64         = 10
	Protobuf3ParserMAP           = 11
	Protobuf3ParserMESSAGE       = 12
	Protobuf3ParserONEOF         = 13
	Protobuf3ParserOPTION        = 14
	Protobuf3ParserPACKAGE       = 15
	Protobuf3ParserPROTO3_DOUBLE = 16
	Protobuf3ParserPROTO3_SINGLE = 17
	Protobuf3ParserPUBLIC        = 18
	Protobuf3ParserREPEATED      = 19
	Protobuf3ParserRESERVED      = 20
	Protobuf3ParserRETURNS       = 21
	Protobuf3ParserRPC           = 22
	Protobuf3ParserSERVICE       = 23
	Protobuf3ParserSFIXED32      = 24
	Protobuf3ParserSFIXED64      = 25
	Protobuf3ParserSINT32        = 26
	Protobuf3ParserSINT64        = 27
	Protobuf3ParserSTREAM        = 28
	Protobuf3ParserSTRING        = 29
	Protobuf3ParserSYNTAX        = 30
	Protobuf3ParserTO            = 31
	Protobuf3ParserUINT32        = 32
	Protobuf3ParserUINT64        = 33
	Protobuf3ParserWEAK          = 34
	Protobuf3ParserIdent         = 35
	Protobuf3ParserIntLit        = 36
	Protobuf3ParserFloatLit      = 37
	Protobuf3ParserBoolLit       = 38
	Protobuf3ParserStrLit        = 39
	Protobuf3ParserQuote         = 40
	Protobuf3ParserLPAREN        = 41
	Protobuf3ParserRPAREN        = 42
	Protobuf3ParserLBRACE        = 43
	Protobuf3ParserRBRACE        = 44
	Protobuf3ParserLBRACK        = 45
	Protobuf3ParserRBRACK        = 46
	Protobuf3ParserLCHEVR        = 47
	Protobuf3ParserRCHEVR        = 48
	Protobuf3ParserSEMI          = 49
	Protobuf3ParserCOMMA         = 50
	Protobuf3ParserDOT           = 51
	Protobuf3ParserMINUS         = 52
	Protobuf3ParserPLUS          = 53
	Protobuf3ParserASSIGN        = 54
	Protobuf3ParserWS            = 55
	Protobuf3ParserCOMMENT       = 56
	Protobuf3ParserLINE_COMMENT  = 57
)

// Protobuf3Parser rules.
const (
	Protobuf3ParserRULE_proto             = 0
	Protobuf3ParserRULE_syntax            = 1
	Protobuf3ParserRULE_importStatement   = 2
	Protobuf3ParserRULE_packageStatement  = 3
	Protobuf3ParserRULE_option            = 4
	Protobuf3ParserRULE_optionName        = 5
	Protobuf3ParserRULE_topLevelDef       = 6
	Protobuf3ParserRULE_message           = 7
	Protobuf3ParserRULE_messageBody       = 8
	Protobuf3ParserRULE_enumDefinition    = 9
	Protobuf3ParserRULE_enumBody          = 10
	Protobuf3ParserRULE_enumField         = 11
	Protobuf3ParserRULE_enumValueOption   = 12
	Protobuf3ParserRULE_service           = 13
	Protobuf3ParserRULE_rpc               = 14
	Protobuf3ParserRULE_reserved          = 15
	Protobuf3ParserRULE_pbranges          = 16
	Protobuf3ParserRULE_pbrange           = 17
	Protobuf3ParserRULE_fieldNames        = 18
	Protobuf3ParserRULE_pbtype            = 19
	Protobuf3ParserRULE_fieldNumber       = 20
	Protobuf3ParserRULE_field             = 21
	Protobuf3ParserRULE_fieldOptions      = 22
	Protobuf3ParserRULE_fieldOption       = 23
	Protobuf3ParserRULE_oneof             = 24
	Protobuf3ParserRULE_oneofField        = 25
	Protobuf3ParserRULE_mapField          = 26
	Protobuf3ParserRULE_keyType           = 27
	Protobuf3ParserRULE_fullIdent         = 28
	Protobuf3ParserRULE_messageName       = 29
	Protobuf3ParserRULE_enumName          = 30
	Protobuf3ParserRULE_messageOrEnumName = 31
	Protobuf3ParserRULE_fieldName         = 32
	Protobuf3ParserRULE_oneofName         = 33
	Protobuf3ParserRULE_mapName           = 34
	Protobuf3ParserRULE_serviceName       = 35
	Protobuf3ParserRULE_rpcName           = 36
	Protobuf3ParserRULE_messageType       = 37
	Protobuf3ParserRULE_messageOrEnumType = 38
	Protobuf3ParserRULE_emptyStatement    = 39
	Protobuf3ParserRULE_constant          = 40
)

// IProtoContext is an interface to support dynamic dispatch.
type IProtoContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsProtoContext differentiates from other interfaces.
	IsProtoContext()
}

type ProtoContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProtoContext() *ProtoContext {
	var p = new(ProtoContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = Protobuf3ParserRULE_proto
	return p
}

func (*ProtoContext) IsProtoContext() {}

func NewProtoContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ProtoContext {
	var p = new(ProtoContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = Protobuf3ParserRULE_proto

	return p
}

func (s *ProtoContext) GetParser() antlr.Parser { return s.parser }

func (s *ProtoContext) Syntax() ISyntaxContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ISyntaxContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ISyntaxContext)
}

func (s *ProtoContext) EOF() antlr.TerminalNode {
	return s.GetToken(Protobuf3ParserEOF, 0)
}

func (s *ProtoContext) AllImportStatement() []IImportStatementContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IImportStatementContext)(nil)).Elem())
	var tst = make([]IImportStatementContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IImportStatementContext)
		}
	}

	return tst
}

func (s *ProtoContext) ImportStatement(i int) IImportStatementContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IImportStatementContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IImportStatementContext)
}

func (s *ProtoContext) AllPackageStatement() []IPackageStatementContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IPackageStatementContext)(nil)).Elem())
	var tst = make([]IPackageStatementContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IPackageStatementContext)
		}
	}

	return tst
}

func (s *ProtoContext) PackageStatement(i int) IPackageStatementContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IPackageStatementContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IPackageStatementContext)
}

func (s *ProtoContext) AllOption() []IOptionContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IOptionContext)(nil)).Elem())
	var tst = make([]IOptionContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IOptionContext)
		}
	}

	return tst
}

func (s *ProtoContext) Option(i int) IOptionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IOptionContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IOptionContext)
}

func (s *ProtoContext) AllTopLevelDef() []ITopLevelDefContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*ITopLevelDefContext)(nil)).Elem())
	var tst = make([]ITopLevelDefContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(ITopLevelDefContext)
		}
	}

	return tst
}

func (s *ProtoContext) TopLevelDef(i int) ITopLevelDefContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ITopLevelDefContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(ITopLevelDefContext)
}

func (s *ProtoContext) AllEmptyStatement() []IEmptyStatementContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IEmptyStatementContext)(nil)).Elem())
	var tst = make([]IEmptyStatementContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IEmptyStatementContext)
		}
	}

	return tst
}

func (s *ProtoContext) EmptyStatement(i int) IEmptyStatementContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IEmptyStatementContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IEmptyStatementContext)
}

func (s *ProtoContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ProtoContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ProtoContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(Protobuf3Listener); ok {
		listenerT.EnterProto(s)
	}
}

func (s *ProtoContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(Protobuf3Listener); ok {
		listenerT.ExitProto(s)
	}
}

func (p *Protobuf3Parser) Proto() (localctx IProtoContext) {
	localctx = NewProtoContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, Protobuf3ParserRULE_proto)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(82)
		p.Syntax()
	}
	p.SetState(90)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for (((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<Protobuf3ParserENUM)|(1<<Protobuf3ParserIMPORT)|(1<<Protobuf3ParserMESSAGE)|(1<<Protobuf3ParserOPTION)|(1<<Protobuf3ParserPACKAGE)|(1<<Protobuf3ParserSERVICE))) != 0) || _la == Protobuf3ParserSEMI {
		p.SetState(88)
		p.GetErrorHandler().Sync(p)

		switch p.GetTokenStream().LA(1) {
		case Protobuf3ParserIMPORT:
			{
				p.SetState(83)
				p.ImportStatement()
			}

		case Protobuf3ParserPACKAGE:
			{
				p.SetState(84)
				p.PackageStatement()
			}

		case Protobuf3ParserOPTION:
			{
				p.SetState(85)
				p.Option()
			}

		case Protobuf3ParserENUM, Protobuf3ParserMESSAGE, Protobuf3ParserSERVICE:
			{
				p.SetState(86)
				p.TopLevelDef()
			}

		case Protobuf3ParserSEMI:
			{
				p.SetState(87)
				p.EmptyStatement()
			}

		default:
			panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		}

		p.SetState(92)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(93)
		p.Match(Protobuf3ParserEOF)
	}

	return localctx
}

// ISyntaxContext is an interface to support dynamic dispatch.
type ISyntaxContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsSyntaxContext differentiates from other interfaces.
	IsSyntaxContext()
}

type SyntaxContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySyntaxContext() *SyntaxContext {
	var p = new(SyntaxContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = Protobuf3ParserRULE_syntax
	return p
}

func (*SyntaxContext) IsSyntaxContext() {}

func NewSyntaxContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SyntaxContext {
	var p = new(SyntaxContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = Protobuf3ParserRULE_syntax

	return p
}

func (s *SyntaxContext) GetParser() antlr.Parser { return s.parser }
func (s *SyntaxContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SyntaxContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *SyntaxContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(Protobuf3Listener); ok {
		listenerT.EnterSyntax(s)
	}
}

func (s *SyntaxContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(Protobuf3Listener); ok {
		listenerT.ExitSyntax(s)
	}
}

func (p *Protobuf3Parser) Syntax() (localctx ISyntaxContext) {
	localctx = NewSyntaxContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, Protobuf3ParserRULE_syntax)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(95)
		p.Match(Protobuf3ParserSYNTAX)
	}
	{
		p.SetState(96)
		p.Match(Protobuf3ParserASSIGN)
	}
	p.SetState(97)
	_la = p.GetTokenStream().LA(1)

	if !(_la == Protobuf3ParserPROTO3_DOUBLE || _la == Protobuf3ParserPROTO3_SINGLE) {
		p.GetErrorHandler().RecoverInline(p)
	} else {
		p.GetErrorHandler().ReportMatch(p)
		p.Consume()
	}
	{
		p.SetState(98)
		p.Match(Protobuf3ParserSEMI)
	}

	return localctx
}

// IImportStatementContext is an interface to support dynamic dispatch.
type IImportStatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsImportStatementContext differentiates from other interfaces.
	IsImportStatementContext()
}

type ImportStatementContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyImportStatementContext() *ImportStatementContext {
	var p = new(ImportStatementContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = Protobuf3ParserRULE_importStatement
	return p
}

func (*ImportStatementContext) IsImportStatementContext() {}

func NewImportStatementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ImportStatementContext {
	var p = new(ImportStatementContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = Protobuf3ParserRULE_importStatement

	return p
}

func (s *ImportStatementContext) GetParser() antlr.Parser { return s.parser }

func (s *ImportStatementContext) StrLit() antlr.TerminalNode {
	return s.GetToken(Protobuf3ParserStrLit, 0)
}

func (s *ImportStatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ImportStatementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ImportStatementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(Protobuf3Listener); ok {
		listenerT.EnterImportStatement(s)
	}
}

func (s *ImportStatementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(Protobuf3Listener); ok {
		listenerT.ExitImportStatement(s)
	}
}

func (p *Protobuf3Parser) ImportStatement() (localctx IImportStatementContext) {
	localctx = NewImportStatementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, Protobuf3ParserRULE_importStatement)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(100)
		p.Match(Protobuf3ParserIMPORT)
	}
	p.SetState(102)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == Protobuf3ParserPUBLIC || _la == Protobuf3ParserWEAK {
		p.SetState(101)
		_la = p.GetTokenStream().LA(1)

		if !(_la == Protobuf3ParserPUBLIC || _la == Protobuf3ParserWEAK) {
			p.GetErrorHandler().RecoverInline(p)
		} else {
			p.GetErrorHandler().ReportMatch(p)
			p.Consume()
		}

	}
	{
		p.SetState(104)
		p.Match(Protobuf3ParserStrLit)
	}
	{
		p.SetState(105)
		p.Match(Protobuf3ParserSEMI)
	}

	return localctx
}

// IPackageStatementContext is an interface to support dynamic dispatch.
type IPackageStatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsPackageStatementContext differentiates from other interfaces.
	IsPackageStatementContext()
}

type PackageStatementContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyPackageStatementContext() *PackageStatementContext {
	var p = new(PackageStatementContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = Protobuf3ParserRULE_packageStatement
	return p
}

func (*PackageStatementContext) IsPackageStatementContext() {}

func NewPackageStatementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *PackageStatementContext {
	var p = new(PackageStatementContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = Protobuf3ParserRULE_packageStatement

	return p
}

func (s *PackageStatementContext) GetParser() antlr.Parser { return s.parser }

func (s *PackageStatementContext) FullIdent() IFullIdentContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IFullIdentContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IFullIdentContext)
}

func (s *PackageStatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *PackageStatementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *PackageStatementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(Protobuf3Listener); ok {
		listenerT.EnterPackageStatement(s)
	}
}

func (s *PackageStatementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(Protobuf3Listener); ok {
		listenerT.ExitPackageStatement(s)
	}
}

func (p *Protobuf3Parser) PackageStatement() (localctx IPackageStatementContext) {
	localctx = NewPackageStatementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, Protobuf3ParserRULE_packageStatement)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(107)
		p.Match(Protobuf3ParserPACKAGE)
	}
	{
		p.SetState(108)
		p.FullIdent()
	}
	{
		p.SetState(109)
		p.Match(Protobuf3ParserSEMI)
	}

	return localctx
}

// IOptionContext is an interface to support dynamic dispatch.
type IOptionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsOptionContext differentiates from other interfaces.
	IsOptionContext()
}

type OptionContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyOptionContext() *OptionContext {
	var p = new(OptionContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = Protobuf3ParserRULE_option
	return p
}

func (*OptionContext) IsOptionContext() {}

func NewOptionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *OptionContext {
	var p = new(OptionContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = Protobuf3ParserRULE_option

	return p
}

func (s *OptionContext) GetParser() antlr.Parser { return s.parser }
